NEWS/ChangeLog for hydroPSO
--------------------------
0.1-59	(under-development & not working yet)
        o 'hydroPSO'      : -) towards SPSO 2011 capable...
        
                            -) argument 'method' now allows the following 2 new values: 'spso2007' and 'spso2011', which set the values of the PSO 
                               engine to the ones of the SPSO 2007 and SPSO 2011, respectively. 
                            -) argument 'method'. The old (default) value 'pso' was replaced by the new (default) value 'spso2011'
                            -) argument 'Vini.type' now allows the following 2 new values: 'random2011' and 'lhs2011', which set the initial velocity 
                               values for the particles to random values according to the equation specified in the SPSO 2011, with a uniform distribution 
                               or with a Latin-hypercube sampling, respectively. The old values 'random' and 'lhs' were replaced by the new 
                               Default ? (so far, SPSO 2011)
                            -) argument 'Vini.type'. The old values 'random' and 'lhs' were replaced by 'random2007' and 'lhs2007', in order to make 
                               clear that the follow the equation described in SPSO 2007.
                            -) argument 'npart', when missing its value depends on the value of the 'method' argument:
                               method == 'spso2007' => npart=10+2*[sqrt(n)] 
                               method != 'spso2007' => npart=40
                            -) in the documentation, default values are now mentioned for each argument of 'control'.

        o Results obtained when running 'hydroPSO' >= 0.1-59 with default settings WILL BE DIFFERENT from those obtained with 'hydroPSO' <= 0.1-58, due to the following changes in default values:
                            -) npart        : 10+2*[sqrt(n)]  ->  40